# AWS_RAG

./: .env.example  .gitignore  QUALITY.md  README.md  plan.md  pyproject.toml  requirements.txt  vercel.json
config/: settings.py
docs/architecture/: rag_pipeline.md
frontend/: bun.lockb  package-lock.json  package.json  vite.config.ts
frontend/src/: router.tsx  styles.css
frontend/src/components/dashboard/: ChatBubble.tsx  ChatPanel.tsx  ExportMenu.tsx  Markdown.tsx  MetricsPanel.tsx  SessionLogs.tsx  SettingsPanel.tsx  SidebarHeader.tsx  SourcesSidebar.tsx  ThinkingStepper.tsx
frontend/src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  (+8 more)
frontend/src/hooks/: use-dashboard-layout.ts
frontend/src/lib/: api-client.ts  session-logs.ts  settings-store.ts  types.ts
frontend/src/routes/: __root.tsx  index.tsx
scripts/: clear_cache.py  eval_rag.py  ingest_aws_data.py  test_redis.py  test_streaming.py
src/: main.py
src/application/: rag_service.py
src/domain/: exceptions.py  models.py
src/infrastructure/: api.py  vector_store.py
src/shared/: guardrails.py
tests/unit/: test_core.py  test_rag_service_fallback.py
