[project]
name = "app"
version = "0.1.0"
dependencies = [ "fastapi", "uvicorn", "pydantic", "pydantic-settings", "langchain", "langchain-openai", "langchain-huggingface", "sentence-transformers", "chromadb", "rank-bm25", "prometheus-client", "pytest", "pytest-asyncio", "httpx", "python-dotenv", "pypdf", "slowapi" ]
requires-python = "~=3.12.0"
